fixes captive-portal layout issue in linux

--- a/src/privileged/vpnRecommender/content/doorhanger/doorhanger.css
+++ b/src/privileged/vpnRecommender/content/doorhanger/doorhanger.css
@@ -111,6 +111,10 @@ body.dark {
   letter-spacing: -0.2px;
 }
 
+#message-header.linux {
+  font-size: 16px;
+}
+
 #message {
   font-size: 13px;
   min-height: 72px;
